--- a/projeto/core/templates/exibeNoticia.html
+++ b/projeto/core/templates/exibeNoticia.html
@@ -28,7 +28,7 @@
 			<div class="row">
 		
 				<div class="col-sm-10 col-sm-offset-1">	
-				  <h1><a href="/noticia/{{i.id}}"> {{i.titulo|upper}}</a></h1>
+				  <h1><a href="/noticia/{{i.slug}}"> {{i.titulo|upper}}</a></h1>
 				  <p style="color:#999999;font-size:10;">Postado em {{i.dataAlteracao|date:"d"}} de {{i.dataAlteracao|date:"F"}} de {{i.dataAlteracao|date:"Y"}} as {{ i.dataAlteracao|time:"H:i" }}</p>
 				  <p style="color:#999999;font-size:10;">Autor {{i.user}}</p>
 				  <hr>
