--- a/projeto/core/templates/index.html
+++ b/projeto/core/templates/index.html
@@ -126,7 +126,7 @@
 <div class="row">
 {% for n in noticias %}
   	<div class="col-sm-10 col-sm-offset-1">	
-      <h1><a href="noticia/{{n.id}}"> {{n.titulo|upper}}</a></h1>
+      <h1><a href="noticia/{{n.slug}}"> {{n.titulo|upper}}</a></h1>
       <p style="color:#999999;font-size:10;">Postado em {{n.dataAlteracao|date:"d"}} de {{n.dataAlteracao|date:"F"}} de {{n.dataAlteracao|date:"Y"}} as {{ n.dataAlteracao|time:"H:i" }}</p>
 	  <p style="color:#999999;font-size:10;">Autor {{n.user}}</p>
       <hr>
