--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -90,11 +90,7 @@
                 <div class="span3" id="footerArea1">
                 
                     <h3>Equipe Fighter</h3>
-					{% for s in sobre %}
-						<p>	{{ s.descricao }} </p>
-					{% empty %}
-						<p></p>
-					{% endfor %}
+						<p id="textoSobre"></p>
                 </div>
                 <div class="span6" id="footerArea2">
 
@@ -174,6 +170,29 @@
 <script src="{{STATIC_URL}}scripts/camera/scripts/camera.min.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}scripts/easing/jquery.easing.1.3.js" type="text/javascript"></script>
 
+<script>
+	$.ajax({
+		url: '/get_sobre/',
+		type: 'get',
+		dataType: "json",
+		success: function(retorno){
+			document.getElementById("textoSobre").innerHTML = retorno[0].fields.descricao;
+		}
+	});
+	
+	/*
+	$.ajax({
+		url: '/get_top5_noticias/',
+		type: 'get',
+		dataType: "json",
+		success: function(retorno){
+			$.each(retorno, function(i, item){
+				document.getElementById("textoSobre").innerHTML = item.fields.descricao;
+			});
+		}
+	});
+	*/
+</script>
 
 {% load cloudinary %}
 {% cloudinary_includes %}
