--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -96,16 +96,11 @@
 
                     <h3>Novas Noticias</h3> 
 
-					{% for n in noticias %}
-						<p>
-							<a href="noticia/{{n.slug}}" title=""> {{n.titulo|upper}}</a><br />
-							<span style="text-transform:none;">Postado em {{n.dataAlteracao|date:"d"}} de {{n.dataAlteracao|date:"F"}} de {{n.dataAlteracao|date:"Y"}} as {{ n.dataAlteracao|time:"H:i" }}</span>
-						</p>
-					{% empty %}
-							<a href="#" title=""> Sem noticias para exibir</a><br />
-							
-					{% endfor %}
-
+					
+					<div id="topNoticias">
+					
+					</div>
+					
                     <p>
 						<a href="/noticias/" title=""> ver mais </a>
                     </p>
@@ -171,6 +166,8 @@
 <script src="{{STATIC_URL}}scripts/easing/jquery.easing.1.3.js" type="text/javascript"></script>
 
 <script>
+ $(document).ready(function(){
+ 
 	$.ajax({
 		url: '/get_sobre/',
 		type: 'get',
@@ -180,18 +177,28 @@
 		}
 	});
 	
-	/*
 	$.ajax({
 		url: '/get_top5_noticias/',
 		type: 'get',
 		dataType: "json",
 		success: function(retorno){
 			$.each(retorno, function(i, item){
-				document.getElementById("textoSobre").innerHTML = item.fields.descricao;
+				
+				data = new Date(item.fields.dataAlteracao);
+				
+				dataPub = data.toString('dd') + ' de ' + data.toString('MM') +' de ' + data.toString('yyyy');
+				console.log(dataPub);
+				//.format("dd-m-yy")
+				
+				tag = '<p><a href="noticia/'+item.fields.slug+'" title=""> '+item.fields.titulo+'</a><br />';
+				tag += '<span style="text-transform:none;">Postado em '+item.fields.dataAlteracao;
+				tag +=' de '+item.fields.dataAlteracao+' de '+item.fields.slug.dataAlteracao+' as '+item.fields.dataAlteracao+'</span></p>'				
+				$("#topNoticias").append(tag);
 			});
 		}
 	});
-	*/
+});
+	
 </script>
 
 {% load cloudinary %}
