--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -121,14 +121,14 @@
                         <i class="general foundicon-mail icon"></i>
                         <span class="field">Email:</span>
                         <br />
-                        <a href="mailto:info@yourdomain.com" title="Email">info@yourdomain.com</a>
+                        <a href="mailto:info@yourdomain.com" title="Email">thaiboxingfera@hotmail.com</a>
                     </li>
                     <li>
                         <i class="general foundicon-home icon" style="margin-bottom:50px"></i>
                         <span class="field">Endereço:</span>
                         <br />
                         Rua Marfim<br />
-                        500 Belo Horizonte, MG<br />
+                        250 Belo Horizonte, MG<br />
                         Brasil
                     </li>
                     </ul>
@@ -157,7 +157,7 @@
 </div>
 <br /><br /><br />
 
-<script src="{{STATIC_URL}}scripts/jquery.min.js" type="text/javascript"></script> 
+<script src="{{STATIC_URL}}scripts/jquery.min.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}scripts/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}scripts/default.js" type="text/javascript"></script>
 
@@ -187,7 +187,7 @@
 				data = new Date(item.fields.dataAlteracao);
 				
 				dataPub = data.toString('dd') + ' de ' + data.toString('MM') +' de ' + data.toString('yyyy');
-				console.log(dataPub);
+				//console.log(dataPub);
 				//.format("dd-m-yy")
 				
 				tag = '<p><a href="noticia/'+item.fields.slug+'" title=""> '+item.fields.titulo+'</a><br />';
