--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -121,7 +121,7 @@
                         <i class="general foundicon-mail icon"></i>
                         <span class="field">Email:</span>
                         <br />
-                        <a href="mailto:info@yourdomain.com" title="Email">thaiboxingfera@hotmail.com</a>
+                        <a href="thaiboxingfera@hotmail.com" title="Email">thaiboxingfera@hotmail.com</a>
                     </li>
                     <li>
                         <i class="general foundicon-home icon" style="margin-bottom:50px"></i>
