--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -121,14 +121,14 @@
                         <i class="general foundicon-mail icon"></i>
                         <span class="field">Email:</span>
                         <br />
-                        <a href="thaiboxingfera@hotmail.com" title="Email">thaiboxingfera@hotmail.com</a>
+                        <a href="mailto:thaiboxingfera@hotmail.com" title="Email">thaiboxingfera@hotmail.com</a>
                     </li>
                     <li>
                         <i class="general foundicon-home icon" style="margin-bottom:50px"></i>
                         <span class="field">Endereço:</span>
                         <br />
-                        Rua Marfim<br />
-                        250 Belo Horizonte, MG<br />
+                        Rua Marfim, 250<br />
+                        Belo Horizonte, MG<br />
                         Brasil
                     </li>
                     </ul>
