descricao sobre_modalidade

--- a/projeto/core/templates/core/equipe.html
+++ b/projeto/core/templates/core/equipe.html
@@ -26,10 +26,12 @@
                     <h1>Equipe Fighter</h1>
 					<hr>
                     <p> 
-						é paz e amor, e muita pancadaria...
-						<strong>temos treinamentos xxx, yyy, zzz</strong>
-						<br/>Agende sua aula experimental. 
+						Nossa missão é a 
+						<strong>SUPERAÇÃO!!!</strong>
+						<br/>
+						Agende sua aula experimental. 
 					</p>
+					<br/>
 										 
 					
 					<h3>Equipe</h3>
