--- a/projeto/core/templates/core/modalidades.html
+++ b/projeto/core/templates/core/modalidades.html
@@ -26,10 +26,12 @@
                     <h1>Modalidades</h1>
 					<hr>
                     <p> 
-						é paz e amor, e muita pancadaria...
-						<strong>temos treinamentos xxx, yyy, zzz</strong>
-						<br/>Agende sua aula experimental. 
+						Nossa missão é a 
+						<strong>SUPERAÇÃO!!!</strong>
+						<br/>
+						Agende sua aula experimental. 
 					</p>
+					<br/>
 					
 					
 					{% for m in modalidades %}
