ajuste index aulas. Inserido o campo para colocar o face

--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -143,12 +143,13 @@
                         Copyright © 2014 EQUIPE FIGHTER. All Rights Reserved.
                     </p>
 
-                    <p class="social_bookmarks">
+                    <p class="social_bookmarks" style="font-size:medium !important;">
                         <a href="http://www.facebook.com/groups/351556464948022/"><i class="social foundicon-facebook"></i> Facebook</a>
 						<!--<a href=""><i class="social foundicon-twitter"></i> Twitter</a>
 						<a href="#"><i class="social foundicon-pinterest"></i> Pinterest</a>
 						<a href="#"><i class="social foundicon-rss"></i> Rss</a>-->
                     </p>
+					
                 </div>
             </div>
 
