--- a/projeto/core/templates/index.html
+++ b/projeto/core/templates/index.html
@@ -46,10 +46,14 @@
 		{% for a in aulas %}
 			<div class="span3">
 				<div class="box">
-					<h3 class="title"><strong>{{ a.modalidade }}</strong></h3> <hr/>
+					<h4 class="title"><strong>{{ a.modalidade|upper }}</strong></h4> <hr/>
 					<p> {{ a.descricao }} </p>
 				</div>
 			</div>
+			{% if forloop.counter|divisibleby:4  %}
+				</div>
+				<div class="row-fluid">
+			{% endif %}								
 		{% endfor %}
     </div>
 	
