--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -115,7 +115,7 @@
                     <li>                                    
                         <i class="general foundicon-phone icon"></i>
                         <span class="field">Telefone:</span>
-                        <br />(31)8823-1257 / (31)9881-7917
+                        (31)9881-7917 / (31)9401-4737 / (31)8823-1257
                     </li>
                     <li>
                         <i class="general foundicon-mail icon"></i>
@@ -125,11 +125,18 @@
                     </li>
                     <li>
                         <i class="general foundicon-home icon" style="margin-bottom:50px"></i>
-                        <span class="field">Endereço:</span>
+                        <span class="field">Sede:</span>
                         <br />
-                        Rua Marfim, 250<br />
-                        Belo Horizonte, MG<br />
-                        Brasil
+						<u>STUDIO DE LUTAS:</u> Rua Marfim, 250 - Coqueiros, Belo Horizonte, MG
+						
+                    </li>
+					<br/>
+					<li>
+                        <i class="general foundicon-home icon" style="margin-bottom:50px"></i>
+                        <span class="field">Filial:</span>
+						<br />
+						<u>ACADEMIA STAR FITNEES:</u> Rua Princesa Isabel, 126 - Contagem - MG  - Tel.: (31)3357-4166
+
                     </li>
                     </ul>
 
