--- a/projeto/core/templates/index.html
+++ b/projeto/core/templates/index.html
@@ -35,8 +35,8 @@
                 <div class="span12" id="divMain">
                     <h1>Faça uma aula experimental</h1>
                     <hr/>
-					<p><strong>Agende um horário através dos telefones (31)8823-1257 / (31)9881-7917 ou através do nosso formulário de contato
-								disponível neste <a href="/contato/">link.</a></p>
+					<p align="center"><strong>Agende um horário através dos telefones (31)9881-7917 / (31)9401-4737 / (31)8823-1257 
+											  ou através do nosso formulário de contato disponível neste <a href="/contato/">link.</a></p>
 
                     <br />
                     <br />
