--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -59,7 +59,7 @@
                     <div id="divMenuRight" class="pull-right">
                     <div class="navbar">
                         <button type="button" class="btn btn-navbar-highlight btn-large btn-primary" data-toggle="collapse" data-target=".nav-collapse">
-                            NAVIGATION <span class="icon-chevron-down icon-white"></span>
+                            MENU <span class="icon-chevron-down icon-white"></span>
                         </button>
                         <div class="nav-collapse collapse" id="menubar">
                             <ul class="nav nav-pills ddmenu">
