--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -5,7 +5,7 @@
     <title>Equipe Fighter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="Html5TemplatesDreamweaver.com">
+    <meta name="author" content="DyestenPaulon">
 	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW"> <!-- Remove this Robots Meta Tag, to allow indexing of site -->
 
     <link href="{{STATIC_URL}}scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
