--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -174,6 +174,16 @@
 <script src="{{STATIC_URL}}scripts/easing/jquery.easing.1.3.js" type="text/javascript"></script>
 
 <script>
+//analytics
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-18072123-3', 'auto');
+  ga('send', 'pageview');
+  
+  
  $(document).ready(function(){
  
 	$.ajax({
@@ -194,7 +204,7 @@
 				data = item.fields.dataAlteracao.substr(0, 10);
 				data = data.substr(8,2)+'/'+data.substr(5,2)+'/'+data.substr(0,4);
 				
-				tag = '<p><a href="noticia/'+item.fields.slug+'" title=""> '+item.fields.titulo+'</a><br />';
+				tag = '<p><a href="../../noticia/'+item.fields.slug+'" title=""> '+item.fields.titulo+'</a><br />';
 				tag += '<span style="text-transform:none;">Postado em '+data;
 				$("#topNoticias").append(tag);
 			});
