--- a/projeto/core/templates/core/noticias.html
+++ b/projeto/core/templates/core/noticias.html
@@ -28,7 +28,8 @@
 						<hr>
 							
 						<p style="color:#999999;font-size:10;">Postado em {{i.dataAlteracao|date:"d"}} de {{i.dataAlteracao|date:"F"}} de {{i.dataAlteracao|date:"Y"}} as {{ i.dataAlteracao|time:"H:i" }} por {{i.user}}</p>
-						<p style="color:#999999;font-size:10;">{{i.noticia|safe|truncatewords:50}}</p>
+						<p style="color:#999999;font-size:10;">{{i.noticia|safe|truncatewords_html:50}}</p>
+
 						<br />
 						<br />
 						
